--- a/src/components/MovieSearch/MovieSearch.module.css
+++ b/src/components/MovieSearch/MovieSearch.module.css
@@ -1,7 +1,8 @@
 .searchForm {
   display: flex;
   align-items: center;
-  margin-left: 15px;
+  margin-left: auto;
+  margin-right: auto;
   width: 500px;
   border-radius: 2px;
   overflow: hidden;
