--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,9 +1,14 @@
-.additionalBox {
-  outline: 2px solid rgb(205, 193, 193);
+.additionalBox.noMargin {
+  /* outline: 2px solid rgb(205, 193, 193); */
   margin-top: 20px;
   padding: 10px 0;
   background-color: rgb(249, 249, 243);
+  border-block: 2px solid;
+  writing-mode: horizontal-tb;
+  margin-left: -20px;
+  margin-right: -20px;
 }
 .title {
   margin: 0;
+  margin-left: 30px;
 }
